--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,49 @@
-pip list --format=freeze > requirements.txt
+Bottleneck==1.3.5
+brotlipy==0.7.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+cryptography==37.0.4
+cycler==0.11.0
+fonttools==4.25.0
+idna==3.4
+joblib==1.2.0
+kiwisolver==1.4.2
+matplotlib==3.5.2
+mkl-fft==1.3.1
+mkl-random==1.2.2
+mkl-service==2.4.0
+munkres==1.1.4
+numexpr==2.8.3
+numpy==1.21.5
+packaging==21.3
+pandas==1.3.5
+Pillow==9.2.0
+pip==22.2.2
+ply==3.11
+pycparser==2.21
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+PyQt5==5.15.7
+PyQt5-sip==12.11.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.28.1
+scikit-learn==1.0.2
+scipy==1.7.3
+setuptools==63.4.1
+sip==6.6.2
+six==1.16.0
+sklearn==0.0
+threadpoolctl==3.1.0
+toml==0.10.2
+torch==1.12.1
+torchaudio==0.12.1
+torchvision==0.13.1
+tornado==6.2
+typing_extensions==4.3.0
+urllib3==1.26.11
+wheel==0.37.1
+win-inet-pton==1.1.0
+wincertstore==0.2
